# quiz-please-game-stats-collector

./: README.md  init_db.sh  pyproject.toml
sql/: 001_create_tables.sql
src/: lambda_function.py  requirements.txt
terraform/: backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
