[project]
name = "quiz-please-game-stats-collector"
version = "0.1.0"
description = "Automated ETL pipeline for Quiz Please game statistics with AWS Lambda and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
